[gd_scene load_steps=5 format=3 uid="uid://bvmr46r6ql433"]

[ext_resource type="Texture2D" uid="uid://gchw5bc6snq3" path="res://icon.svg" id="1_fix7m"]
[ext_resource type="Script" path="res://enemy.gd" id="1_rx4lw"]
[ext_resource type="Texture2D" uid="uid://byuas1afyksl" path="res://assets/graphics/hp_bar_empty.png" id="3_2iwvj"]
[ext_resource type="Texture2D" uid="uid://c44103jblfdwc" path="res://assets/graphics/hp_bar_full.png" id="4_qojf3"]

[node name="Enemy" type="Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_rx4lw")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/Control"]
texture = ExtResource("1_fix7m")

[node name="HitPointsBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 24.0
grow_horizontal = 2
texture_under = ExtResource("3_2iwvj")
texture_progress = ExtResource("4_qojf3")

[node name="HitPointsLabel" type="Label" parent="HitPointsBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -11.5
offset_right = 13.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "X/Y"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
